2009-10-16  Thomas E. Dickey  <dickey@invisible-island.net>

	* user/ded.man: add SVN

2009-10-15  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/ded.h:
	enable RCS/SCCS/... mode if CVS or SVN are found, even if no RCS/SCCS is found

	* configure: regen with autoconf-252

	* aclocal.m4: resync with my-autoconf (lots of changes)

2009-08-25  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.guess, config.sub: RCS_BASE

2007-03-25  Thomas E. Dickey  <dickey@invisible-island.net>

	* mkdirs.sh: resync with my-autoconf

2005-01-24  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedview.c, src/dedtype.c, src/dedscan.c, src/ded2s.c:
	Intel compiler warning

	* aclocal.m4: comments for CF_FIND_LIBRARY

	* src/ded2s.c: add a cast to quiet compiler

2004-09-16  Thomas E. Dickey  <dickey@invisible-island.net>

	* configure: RCS_BASE

	* aclocal.m4: update CF_CHECK_CACHE

	* COPYING: change to diffstat's style of copyright

	* user/ded.man: add copyright notice

	* user/ded.man:
	documented the -D option and the way it affects the T command

	* user/ded.man: workarounds for groff-breakage.

2004-09-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedline.c: implement -D option, for editing dates

	* src/inline.c: tidying up whitespace

	* src/ded.c: added -D option, for editing dates

	* src/ded.h: implement -D option

2004-03-18  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedname.c, src/ftree.c:
	update old_wd if we rename the directory it was.

2004-03-08  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedview.c: add a cast to ensure that "%ld" honored.

	* configure.in: remove certify

2004-03-07  Thomas E. Dickey  <dickey@invisible-island.net>
