@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20091016
+MANIFEST for ded, version t20091115
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
